Restructured project. Modified blog page.

--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@ layout: default
 permalink: /
 ---
 
-{% include header.html %}
+{% include index/header.html %}
 
-{% include vitaliy/vitaliy-landing.html %}
+{% include index/vitaliy/vitaliy-landing.html %}
 
-{% include vitaliy/about-vitaliy.html %}
+{% include index/vitaliy/about-vitaliy.html %}
 
-{% include vitaliy/focusing.html %}
+{% include index/vitaliy/focusing.html %}
 
-{% include vitaliy/work-experience.html %}
+{% include index/vitaliy/work-experience.html %}
 
-{% include vitaliy/footer-vitaliy.html %}
+{% include index/vitaliy/footer-vitaliy.html %}
